# mio-compat

./: Cargo.toml
src/: evented.rs  events.rs  lib.rs  poll.rs  registration.rs
src/net/: mod.rs  tcp.rs  udp.rs
src/unix/: mod.rs
test/: benchmark.rs  mod.rs  test_battery.rs  test_broken_pipe.rs  test_close_on_drop.rs  test_custom_evented.rs  test_double_register.rs  test_echo_server.rs  test_fuchsia_handles.rs  test_local_addr_ready.rs  test_multicast.rs  test_notify.rs  test_oneshot.rs  test_poll.rs  test_poll_channel.rs  test_register_deregister.rs  test_register_multiple_event_loops.rs  test_reregister_without_poll.rs  test_smoke.rs  test_subprocess_pipe.rs  test_tcp.rs  test_tcp_level.rs  test_tcp_shutdown.rs  test_tick.rs  test_udp_level.rs  test_udp_socket.rs  test_uds_shutdown.rs  test_unix_echo_server.rs  test_unix_pass_fd.rs  test_write_then_drop.rs
