[package]
name = "mio-compat"
version = "0.1.0"
authors = ["dennis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iovec = "0.1.1"
mio = { git = "https://github.com/PerfectLaugh/mio" }
mio_old = { package = "mio", version = "0.6" }

[dev-dependencies]
env_logger = { version = "0.4.0", default-features = false }
tempdir = "0.3.4"
bytes = "0.3.0"
net2 = "0.2.29"
slab = "0.4.0"
log = "0.4"

[[test]]	
name = "test"	
path = "test/mod.rs"
